fix - change spacing for span

--- a/src/components/BreadCrumb/index.sass
+++ b/src/components/BreadCrumb/index.sass
@@ -9,7 +9,7 @@
     padding-bottom: 10px
 
   span
-    padding: 5px 2px 0 2px
+    padding: 5px 10px 0 10px
 
   &__text
     display: flex
